# HackAI-2026

./: .gitignore  README.md  git_status.txt
backend/: .env  .env.example  .gitignore  .pyre_configuration  README.md  config.py  debug_output.txt  main.py  models.txt  preview_pdf.py  pyproject.toml  requirements.txt  test_analyze.py  test_api.py  test_news_structure.py  test_script.py
backend/app/: main.py  reproduce_issue.py  test_tools.py
backend/app/agents/incident/: graph.py  tools.py
backend/app/agents/market/: alerts.py  graph.py  tools.py
backend/app/agents/supply_chain/: graph.py  state.py  tools.py
backend/app/api/: __init__.py  alerts_manager.py  email_service.py  incident_routes.py  market_routes.py  supply_chain_routes.py
backend/app/dataset/: industry_map.json  ports_baseline.csv
backend/chroma_db/: chroma.sqlite3
frontend/: index.html  package-lock.json  package.json
frontend/src/: index.css
frontend/src/components/: AgentChat.jsx  MarketAlerts.jsx  MarketTerminal.jsx  Overview.jsx  ReliabilityIntel.jsx  Sidebar.jsx  SupplyChainDashboard.jsx
frontend/src/pages/: Dashboard.jsx
